--- a/test/integration/targets/nxos_vrf/tests/common/intent.yaml
+++ b/test/integration/targets/nxos_vrf/tests/common/intent.yaml
@@ -1,5 +1,7 @@
 ---
-- debug: msg="START TRANSPORT:{{ connection.transport }} nxos_vrf intent & aggregate test"
+- debug: msg="START connection={{ ansible_connection }} nxos_vrf intent & aggregate test"
+- debug: msg="Using provider={{ connection.transport }}"
+  when: ansible_connection == "local"
 
 - set_fact: testint1="{{ nxos_int1 }}"
 - set_fact: testint2="{{ nxos_int2 }}"
@@ -164,4 +166,4 @@
     provider: "{{ connection }}"
   ignore_errors: yes
 
-- debug: msg="END TRANSPORT:{{ connection.transport }} nxos_vrf intent & aggregate test"
+- debug: msg="END connection={{ ansible_connection }} nxos_vrf intent & aggregate test"
