--- a/test/integration/targets/azure_rm_mysqldatabase/tasks/main.yml
+++ b/test/integration/targets/azure_rm_mysqldatabase/tasks/main.yml
@@ -1,41 +1,74 @@
+- name: Prepare random number
+  set_fact:
+    rpfx: "{{ resource_group | hash('md5') | truncate(7, True, '') }}{{ 1000 | random }}"
+  run_once: yes
+
 - name: Create MySQL Server
   azure_rm_mysqlserver:
     resource_group: "{{ resource_group }}"
-    name: test-mysql-server
-    properties:
-      version: 5.6
-      create_mode: Default
-      admin_username: zimxyz
-      admin_password: Testpasswordxyz12!
+    name: "mysqlsrv{{ rpfx }}"
+    sku:
+      name: MYSQLB50
+      tier: basic
     location: westus
+    version: 5.6
+    enforce_ssl: True
+    admin_username: zimxyz
+    admin_password: Testpasswordxyz12!
+
+- name: Create instance of MySQL Database -- check mode
+  azure_rm_mysqldatabase:
+    resource_group: "{{ resource_group }}"
+    server_name: "mysqlsrv{{ rpfx }}"
+    name: testdatabase
+  check_mode: yes
+  register: output
+- name: Assert the resource instance is well created
+  assert:
+    that:
+      - output.changed
+
 - name: Create instance of MySQL Database
   azure_rm_mysqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: test-mysql-server
+    server_name: "mysqlsrv{{ rpfx }}"
     name: testdatabase
   register: output
 - name: Assert the resource instance is well created
   assert:
     that:
       - output.changed
-      - output.state.name == 'testdatabase'
+      - output.name == 'testdatabase'
 
-- name: Update instance of MySQL Database
+- name: Create again instance of MySQL Database
   azure_rm_mysqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: test-mysql-server
+    server_name: "mysqlsrv{{ rpfx }}"
     name: testdatabase
   register: output
 - name: Assert the state has not changed
   assert:
     that:
       - output.changed == false
-      - output.state.name == 'testdatabase'
+      - output.name == 'testdatabase'
+
+- name: Delete instance of MySQL Database -- check mode
+  azure_rm_mysqldatabase:
+    resource_group: "{{ resource_group }}"
+    server_name: "mysqlsrv{{ rpfx }}"
+    name: testdatabase
+    state: absent
+  check_mode: yes
+  register: output
+- name: Assert the state has changed
+  assert:
+    that:
+      - output.changed
 
 - name: Delete instance of MySQL Database
   azure_rm_mysqldatabase:
     resource_group: "{{ resource_group }}"
-    server_name: test-mysql-server
+    server_name: "mysqlsrv{{ rpfx }}"
     name: testdatabase
     state: absent
   register: output
@@ -44,8 +77,20 @@
     that:
       - output.changed
 
+- name: Delete unexisting instance of MySQL Database
+  azure_rm_mysqldatabase:
+    resource_group: "{{ resource_group }}"
+    server_name: "mysqlsrv{{ rpfx }}"
+    name: testdatabase
+    state: absent
+  register: output
+- name: Assert the state has changed
+  assert:
+    that:
+      - output.changed == false
+
 - name: Delete instance of MySQL Server
   azure_rm_mysqlserver:
     resource_group: "{{ resource_group }}"
-    name: test-mysql-server
+    name: "mysqlsrv{{ rpfx }}"
     state: absent
