Fix connection type in junos integration tests
*  For find module in junos integration test
   add connection type local and delegate task to localhost

--- a/test/integration/targets/junos_command/tasks/netconf_json.yaml
+++ b/test/integration/targets/junos_command/tasks/netconf_json.yaml
@@ -3,6 +3,8 @@
   find:
     paths: "{{ role_path }}/tests/netconf_json"
     patterns: "{{ testcase }}.yaml"
+  connection: local
+  delegate_to: localhost
   register: test_cases
 
 - name: set test_items
