--- a/test/integration/targets/junos_interface/tasks/netconf.yaml
+++ b/test/integration/targets/junos_interface/tasks/netconf.yaml
@@ -3,8 +3,9 @@
   find:
     paths: "{{ role_path }}/tests/netconf"
     patterns: "{{ testcase }}.yaml"
-  register: test_cases
+  connection: local
   delegate_to: localhost
+  register: test_cases
 
 - name: set test_items
   set_fact: test_items="{{ test_cases.files | map(attribute='path') | list }}"
