--- a/test/integration/targets/junos_rpc/tasks/netconf.yaml
+++ b/test/integration/targets/junos_rpc/tasks/netconf.yaml
@@ -3,6 +3,8 @@
     paths: "{{ role_path }}/tests/netconf"
     patterns: "{{ testcase }}.yaml"
   register: test_cases
+  connection: local
+  delegate_to: localhost
 
 - name: set test_items
   set_fact: test_items="{{ test_cases.files | map(attribute='path') | list }}"
