--- a/test/integration/targets/junos_static_route/tasks/netconf.yaml
+++ b/test/integration/targets/junos_static_route/tasks/netconf.yaml
@@ -4,6 +4,7 @@
     paths: "{{ role_path }}/tests/netconf"
     patterns: "{{ testcase }}.yaml"
   register: test_cases
+  connection: local
   delegate_to: localhost
 
 - name: set test_items
